# tempature-yoy

./: .pre-commit-config.yaml  README.md  analysis.py  index.html  justfile  make_all.py  pyproject.toml  script.js  script.ts  style.css
.github/workflows/: daily_update.yml
public/: data.json
