[project]
name = "tempature-yoy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "loguru>=0.7.3",
    "pandas>=3.0.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",  # missing-trailing-comma
  "T20",  # flake8-print
  "ERA",  # eradicate
  "D",  # docstrings
]

[tool.ruff.lint.pydocstyle]
convention = "google"
